updated swagger ui doc
