# routes/type.routes.js
@@ -21,11 +21,11 @@ const storage = multer.diskStorage({
 
 const upload = multer({ storage });
 /** Image Field Defining routes */
-router.post('/projects/:projectname/content/newImage', verifyToken, getParams, upload.single('file'), TypeController.addImage);
-router.get('/projects/:projectname/content/deleteImage', verifyToken, getParams, TypeController.removeImage);
-router.get('/projects/:projectname/content/getImages', verifyToken, getParams, TypeController.getImages);
+router.post('/:projectname/content/newImage', verifyToken, getParams, upload.single('file'), TypeController.addImage);
+router.get('/:projectname/content/deleteImage', verifyToken, getParams, TypeController.removeImage);
+router.get('/:projectname/content/getImages', verifyToken, getParams, TypeController.getImages);
 
 /** Text Field Defining routes */
-router.post('/projects/:projectname/content/newText', verifyToken, getParams, TypeController.addText);
+router.post('/:projectname/content/newText', verifyToken, getParams, TypeController.addText);
 
 module.exports = router;
